# osi-cpp

./: CMakeLists.txt  CMakePresets.json  README.md  VERSION  open_simulation_interface-config.cmake.in
.github/workflows/: build.yaml  remote_release.yml
